--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,6 @@
   font-family: "Roboto", sans-serif;
   display: grid;
   place-items: center;
-  background-color: #f1f1f1;
 }
 
 * {
@@ -50,17 +49,12 @@ body {
   height: 50%;
   background: #fff;
   border-radius: 10px;
+  box-shadow: 0 0 10px 0px #ccc;
 }
 
-.card-join h3 {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-}
 .card-join input {
   width: 100%;
   height: 40px;
-  margin: 7px 0;
-  border: 2px solid #43a047;
   border-radius: 5px;
   padding: 5px;
   font-size: 16px;
@@ -69,18 +63,10 @@ body {
 .card-join button {
   width: 100%;
   height: 40px;
-  margin: 7px 0;
   border: none;
   border-radius: 5px;
-  padding: 5px;
   font-size: 16px;
-  background: #43a047;
-  color: #fff;
-  cursor: pointer;
-}
-
-.card-join button:hover {
-  background: #2e7d32;
+  margin-top: 10px;
 }
 
 .chat-window {
@@ -88,27 +74,40 @@ body {
   height: 100%;
 }
 
+.btn-back {
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 5px;
+}
+
+.btn-back:hover {
+  background: #2e7d32;
+}
+
 .chat-window p {
   margin: 0;
 }
 .chat-window .chat-header {
   height: 45px;
-  background: #263238;
+  background: #5965E0;
   position: relative;
-  cursor: pointer;
+  user-select: none;
+  box-shadow: 0px 5px 10px 0px #ccc;
 }
 .chat-window .chat-header p {
   display: block;
-  padding: 0 1em 0 2em;
   color: #fff;
   font-weight: 700;
-  line-height: 45px;
 }
 
 .chat-window .chat-body {
   height: calc(100vh - 85px);
   border: 1px solid #263238;
-  background: #f1f1f1;
   position: relative;
 }
 
@@ -134,15 +133,18 @@ body {
   min-height: 40px;
   max-width: 120px;
   min-width: 15em;
-  background-color: #43a047;
-  border-radius: 5px;
-  color: white;
+  background-color: #f1f1f1;
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  padding: 15px 10px;
   overflow-wrap: break-word;
   word-break: break-word;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+}
+
+.picker-container {
+  position: relative;
+  width: 300px;
 }
 
 #you {
@@ -151,6 +153,8 @@ body {
 
 #you .message-card {
   justify-content: flex-end;
+  color: #1e1e1e;
+  border-radius: 10px 10px 0px 10px;
 }
 
 #you {
@@ -164,7 +168,9 @@ body {
 
 #other .message-card {
   justify-content: flex-start;
-  background-color: cornflowerblue;
+  background-color: #5965E0;
+  color: #fff;
+  border-radius: 10px 10px 10px 0px;
 }
 
 #other {
@@ -175,21 +181,22 @@ body {
 #author {
   font-weight: bold;
   margin-bottom: 10px;
-  font-size: 1.4em;
+  font-size: 1em;
 }
 
 #message-content {
-  font-size: 1.2em;
+  font-size: 0.8em;
 }
 
-#other #time {
+#time {
   margin-left: 5px;
   margin-top: 5px;
+  font-size: 0.7em;
 }
 
 .chat-window .chat-body .message {
   display: flex;
-  font-size: 12px;
+  font-size: 1.1em;
 }
 
 .chat-window .chat-footer {
@@ -205,10 +212,18 @@ body {
   border: 0;
   padding: 0 0.7em;
   font-size: 1em;
-  border-right: 1px dotted #607d8b;
-
+  border-right: 1px solid #1e1e1e;
   outline: none;
   font-family: "Roboto", sans-serif;
+}
+
+.emoji-icon {
+  padding: 10px;
+  cursor: pointer;
+  border-right: 1px solid #1e1e1e;
+}
+.emoji-icon:hover {
+  background-color: #5965E0;
 }
 
 .chat-window .chat-footer button {
@@ -216,17 +231,34 @@ body {
   display: grid;
   place-items: center;
   cursor: pointer;
-  flex: 15%;
+  width: 50px;
   height: 100%;
-  background: transparent;
+  background: #4CD62B;
   outline: none;
-  font-size: 25px;
-  color: lightgray;
+  font-size: 20px;
+  color: #fff;
 }
 
 .chat-window .chat-footer button:hover {
-  color: #43a047;
+  background: #5965E0;
 }
 .hide {
   opacity: 0 !important;
+}
+
+
+@media (max-width: 1000px) {
+  .card-join {
+    width: 70%;
+  }
+
+  .chat-window .chat-footer button {
+    width: 18%;
+  }
+}
+
+@media (max-width: 768px) {
+  .card-join {
+    width: 90%;
+  }
 }
